<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com
     Minor Programmeren 2015/2016 - Universiteit van Amsterdam -->

<resources>
    <string name="app_name">Ghost</string>

    <string name="hello_world">Test test test!</string>
    <string name="action_settings">Settings</string>
    <string name="ghost_title_text">Ghost</string>
    <string name="newgame_buttontext">New Game</string>
    <string name="highscores_buttontext">Highscores</string>
    <string name="player1_text">Player 1</string>
    <string name="player1_edittext_text">Enter username</string>
    <string name="player2_text">Player 2</string>
    <string name="enter_username_text">Enter username</string>
    <string name="flag_nl_text">Nederlands</string>
    <string name="flag_en_text">English</string>
    <string name="start_button_text">Start</string>
    <string name="userinput_hint_text">input here</string>
    <string name="fragment_placeholder_text">fragment_</string>
    <string name="add_letter_button_text">Add</string>
    <string name="playerturn_placeholder_text">Player 1\'s</string>
    <string name="playerwin_placeholder_text">Player 1 wins!!!</string>
    <string name="playerwin_reason_placeholder_text">Player 1 wins since fragment could not become a word…</string>
    <string name="continue_button">Continue</string>
    <string name="highscores_text">Highscores</string>
    <string name="newgame_button_text">New Game</string>
    <string name="endgame_button_text">End</string>
    <string name="instructions_button">Instructions</string>
    <string name="back_button">Back</string>
    <string name="settings_text">Settings</string>
    <string name="namechange_button">Change</string>
    <string name="instructions_text">Instructions</string>
    <string name="latin_placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in nisl consequat, sodales nisi in, accumsan neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris ullamcorper tempus enim. Nunc eleifend leo vitae arcu posuere bibendum. Cras pretium ex mi, et finibus diam dapibus eleifend. Aenean varius vestibulum malesuada. Cras maximus, eros vehicula lobortis tristique, enim lectus condimentum lectus, vitae feugiat eros velit sit amet augue. Donec volutpat ante eu metus mollis interdum. Curabitur dignissim justo ultrices felis molestie accumsan. Nunc porttitor et dolor a hendrerit.
                                            In ut tincidunt leo. Praesent vitae tempus justo. Mauris feugiat dui sed leo feugiat, et volutpat nibh ornare. Aliquam tincidunt in odio ac viverra. Praesent libero purus, iaculis id turpis vel, suscipit auctor purus. Cras orci magna, ornare ac metus nec, vestibulum aliquet arcu. Donec ultrices eu nisi non tristique. Etiam mattis vestibulum mi, ac dapibus erat pellentesque sit amet. Curabitur metus diam, laoreet quis cursus id, rhoncus eu sapien. Nulla luctus convallis consectetur. Sed vel leo nec velit aliquet tincidunt.
                                            </string>
    <string name="noreturnallowed_toasttext">You cannot use this button here. Please continue to highscores first.</string>
    <string name="dialog_areyousure_titletext">Are you sure?</string>
    <string name="dialogmessage_gamewillbelost_text">Going back might cause the game state to be lost</string>
    <string name="positivedialog_buttontext">I\'m Sure</string>
    <string name="cancelbutton_text">Cancel</string>
    <string name="cancelled_text">Cancelled</string>
    <string name="exit_text">Exit</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="choose_dictionary">Choose dictionary</string>
    <string name="help_text">Help</string>
    <string name="lenghtusername_toast">Player name cannot be longer than 10 characters</string>
    <string name="clearhighscore_text">Clear Highscores</string>
    <string name="no_highscores">There is no highscore created yet</string>
    <string name="cleared_highscores">Cleared Highscores</string>
    <string name="sameplayername_warningtext">Player 1 and Player 2 cannot have the same name</string>

</resources>
