<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com
     Minor Programmeren 2015/2016 - Universiteit van Amsterdam -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nl.mprog.ghost.GhostPlayerInput"
    android:background="@mipmap/other_bg">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_margin="10dp">

        <Spinner
            android:id="@+id/player1_avatarspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/player1_edittext" />

        <TextView
            android:id="@+id/player1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player1_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="51dp"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/player1_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1_text"
            android:layout_alignStart="@+id/player1_text"
            android:textColor="#ffffff"
            android:text="@string/player1_edittext_text"
            android:padding="5dp"
            android:layout_margin="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_margin="10dp">

        <Spinner
            android:id="@+id/player2_avatarspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/player2_text" />

        <TextView
            android:id="@+id/player2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player2_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="49dp"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/player2_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player2_text"
            android:layout_toEndOf="@+id/player2_avatarspinner"
            android:textColor="#ffffff"
            android:text="@string/enter_username_text"
            android:padding="5dp"
            android:layout_margin="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_margin="10dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radiobutton_nl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flag_nl_text"
                android:textColor="#ffffff"
                android:layout_alignParentEnd="false"
                android:padding="15dp" />

            <RadioButton
                android:id="@+id/radiobutton_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flag_en_text"
                android:textColor="#ffffff"
                android:layout_alignParentStart="false" />

        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />

</LinearLayout>
