<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com
     Minor Programmeren 2015/2016 - Universiteit van Amsterdam -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nl.mprog.ghost.GhostInGame"
    android:background="@mipmap/user1turn_bg">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#30ffffff"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/current_fragment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fragment_placeholder_text"
            android:layout_gravity="center_horizontal"
            android:textSize="50sp" />

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userinput_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/userinput_hint_text" />

        <Button
            android:id="@+id/add_letter_button"
            android:onClick="makeGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_letter_button_text"
             />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/char_imageView"
            android:onClick="debugBackdoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/charc_no1"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/playerturn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/playerturn_placeholder_text"
            android:layout_gravity="center_vertical"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
