<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com
     Minor Programmeren 2015/2016 - Universiteit van Amsterdam -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ghost.GhostHighscores"
    android:orientation="vertical"
    android:background="@mipmap/other_bg">


    <TextView
        android:id="@+id/highscores_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/highscores_text"
        android:layout_gravity="center_horizontal"
        android:shadowColor="#ffffff"
        android:shadowRadius="25"
        android:textSize="40sp" />

    <ListView
        android:id="@+id/highscores_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#40ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/newgame_button"
            android:onClick="newGameStart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newgame_button_text"
            android:layout_weight="1"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/endgame_button"
            android:onClick="backToHome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/endgame_button_text"
            android:layout_weight="1"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>
