<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com
     Minor Programmeren 2015/2016 - Universiteit van Amsterdam -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ghost.GhostSettings"
    android:orientation="vertical"
    android:background="@mipmap/other_bg"
    android:weightSum="1">

    <TextView
        android:id="@+id/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_text"
        android:shadowColor="#ffffff"
        android:shadowRadius="25"
        android:textSize="30sp"/>

    <ScrollView
        android:id="@+id/settings_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000000"
                android:padding="5dp">

                <TextView
                    android:id="@+id/languagepref_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Language preference"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/languagepref_text">

                    <RadioButton
                        android:id="@+id/languagepref_nl_radiobutton"
                        android:onClick="langprefChosen"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:button="@android:color/transparent"
                        android:text=""
                        android:background="@drawable/radiobutton_nl" />

                    <RadioButton
                        android:id="@+id/languagepref_en_radiobutton"
                        android:onClick="langprefChosen"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:button="@android:color/transparent"
                        android:text=""
                        android:background="@drawable/radiobutton_en" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000000"
                android:padding="5dp">

                <TextView
                    android:id="@+id/dictionarypref_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Dictionary preference"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/dictionarypref_text">

                    <RadioButton
                        android:id="@+id/dictionarypref_nl_radiobutton"
                        android:onClick="dictprefChosen"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:button="@android:color/transparent"
                        android:text=""
                        android:background="@drawable/radiobutton_nl"
                        android:layout_margin="5dp" />

                    <RadioButton
                        android:id="@+id/dictionarypref_en_radiobutton"
                        android:onClick="dictprefChosen"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:button="@android:color/transparent"
                        android:text=""
                        android:background="@drawable/radiobutton_en"
                        android:layout_margin="5dp" />

                </RadioGroup>

            </RelativeLayout>

            <Button
                android:id="@+id/newgame_button"
                android:onClick="startNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newgame_button_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/instructions_button"
                android:onClick="openInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_button"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/highscoreclear_button"
                android:onClick="clearHighscores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clearhighscore_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/back_button"
        android:onClick="goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

</LinearLayout>
